Вместо std::experimental оставил std; убрал ссылку на librt.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -91,8 +91,8 @@ target_compile_features(concurrencpp PUBLIC cxx_std_20)
 
 target_coroutine_options(concurrencpp)
 
-find_library(LIBRT NAMES rt DOC "Path to the Real Time shared library")
-target_link_libraries(concurrencpp PUBLIC "$<$<BOOL:${LIBRT}>:${LIBRT}>")
+# find_library(LIBRT NAMES rt DOC "Path to the Real Time shared library")
+# target_link_libraries(concurrencpp PUBLIC "$<$<BOOL:${LIBRT}>:${LIBRT}>")
 
 # ---- Install ----
 
